# ha-registry

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  cliff.toml  deny.toml  flake.nix  justfile  rust-toolchain.toml  treefmt.nix
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yml  cargo-outdated.yml  flake.yml  test.yml
.reuse/: dep5
nixos/modules/: default.nix  ha-registry.nix
nixos/tests/: status.nix
src/: main.rs
src/api/: mod.rs  routes.rs
src/api/ha_registry/: mod.rs  routes.rs
src/api/ha_registry/v1/: mod.rs  routes.rs
src/api/ha_registry/v1/status/: handlers.rs  mod.rs
src/api/oci/: mod.rs  routes.rs
src/api/oci/v1/: mod.rs
src/api/oci/v2/: errors.rs  mod.rs  routes.rs
src/api/oci/v2/handlers/: handlers.rs
src/api/oci/v2/oci/: handlers.rs  mod.rs
src/cli/: command.rs  mod.rs
src/data/: config.rs  mod.rs  status.rs
src/storage/: mod.rs  s3.rs
