# SPDX-FileCopyrightText: 2024 Christina Sørensen
# SPDX-FileContributor: Christina Sørensen
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "ha-registry"
description = "High Availability Container Registry"
edition = "2021"
authors = ["Christina Sørensen <christina@cafkafk.com>"]
categories = ["command-line-utilities"]
license = "EUPL-1.2"
version = "0.0.1"
rust-version = "1.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.1"
aws-sdk-s3 = "1.36.0"
axum = { version = "0.7.5", features = ["macros", "original-uri", "json"] }
bytes = "1.7.1"
clap = { version = "4.5.15", features = ["cargo"] }
form_urlencoded = "1.2.1"
http-body-util = "0.1.0"
hyper = { version = "1.4", features = ["client"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["json"] }
semver = "1.0.22"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
serde_norway = "0.9.37"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread", "sync"] }

[build-dependencies]
clap = { version = "4.5.15", features = ["cargo"] }
clap_complete = "4"
clap_mangen = "0.2.23"

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4.2"
